src/chart/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: serviceforotus
spec:
  containers:
    - name: app
      image: e1name/forotus:v1
      ports:
        - containerPort: 8000
